added image folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </legend>
         <h3>NAME: </h3>
         <p><i><h3>Parishi Gupta</h3></i></p>
-        <img src="" alt="here was a picture of me">
+        <img src="images/myimage.jpeg" alt="here was a picture of me" width="350" height="250">
         <h3> EDUCATION :</h3>
         <p>I'm first year undergraduate student in <i>Chemistry</i> Department at IIT Bombay. </p>
     </fieldset>
@@ -119,21 +119,6 @@
     </table>
  <footer><h3>For more information, please visit <a href="https://gymkhana.iitb.ac.in/~ugacademics/learnerspace_2020/index.php" target="_blank">
     this link.</a> </h3></footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
